# ecomprj

./: .gitignore  README.md  db.sqlite3  pyproject.toml
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_remove_product_tags_alter_vendor_title.py  0003_product_vendor.py
ecomprj/: settings.py  urls.py
ecomprj/settings/: __init__.py
ecomprj/settings/components/: __init__.py  base.py  database.py  logging.py
ecomprj/settings/environments/: dev.py  prod.py
templates/core/: index.html
templates/partials/: base.html
templates/userauths/: sign-in.html  sign-up.html
userauths/: admin.py  forms.py  models.py  urls.py  views.py
userauths/migrations/: 0001_initial.py
