[tool.poetry]
name = "ecomprj"
version = "0.1.0"
description = ""
authors = ["kolesnikovvitaliy <kolesnikovvitaliy@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-split-settings = "^1.2.0"
django-debug-toolbar = "^4.3.0"
django-jazzmin = "^2.6.0"
django = "4.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
